--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elvin-record-sdk",
+  "name": "elvin-record-js",
   "version": "1.0.0",
   "author": "martin-yn",
   "description": "",
