--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -19,8 +19,13 @@
   "dependencies": {
     "axios": "^0.27.2",
     "error-stack-parser": "^2.1.4",
+    "less": "^4.1.3",
+    "rollup-plugin-styles": "^4.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
     "rrweb": "^2.0.0-alpha.0",
-    "svelte": "^3.49.0"
+    "svelte": "^3.49.0",
+    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess-less": "^0.4.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.1",
