--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "format": "prettier --write packages/**/*.{ts,js}",
     "tsc": "tsc --watch",
+    "dev": "rollup -w -c rollup.config.js",
     "build": "tsc -p tsconfig.json && rollup -c rollup.config.js"
   },
   "files": [
