--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -52,6 +52,8 @@
     "mysql2": "^2.3.3",
     "nest-winston": "^1.7.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
