--- a/packages/service/.env
+++ b/packages/service/.env
@@ -34,22 +34,22 @@ DATABASE_SYNCHRONIZE=true
 DATABASE_DROPSCHEMA=false
 
 # JWT访问令牌密钥
-JWT_ACCESS_TOKEN_SECRET=
+JWT_ACCESS_TOKEN_SECRET=我徒弟呢?
 # JWT访问令牌有效时间
-JWT_ACCESS_TOKEN_EXPIRATION_TIME=
+JWT_ACCESS_TOKEN_EXPIRATION_TIME=720000
 # JWT刷新令牌密钥
-JWT_REFRESH_TOKEN_SECRET=
+JWT_REFRESH_TOKEN_SECRET=我徒弟呢?
 # JWT刷新令牌有效时间
-JWT_REFRESH_TOKEN_EXPIRATION_TIME=
+JWT_REFRESH_TOKEN_EXPIRATION_TIME=720000
 # JWT记住我有效时间
-JWT_REMEMBER_ME_EXPIRATION_TIME=
+JWT_REMEMBER_ME_EXPIRATION_TIME=72000
 
 # Redis配置
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=""
-REDIS_PRIFIX=
+REDIS_PRIFIX=""
 
 # 缓存
 CACHE_TTL=3600
@@ -60,15 +60,15 @@ CACHE_PASSWORD=""
 CACHE_PORT=6379
 
 # 日志
-LOGGER_FILE=false
+LOGGER_FILE=true
 LOGGER_CONSOLE=true
 
 # Axios请求配置
-AXIOS_TIMEOUT=
+AXIOS_TIMEOUT=6000
 
 # 速率限制
-THROTTLE_TTL=
-THROTTLE_LIMIT=
+THROTTLE_TTL=60
+THROTTLE_LIMIT=1000
 
 # 文件上传
 MULTER_DEST=
