--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -35,8 +35,10 @@
     "@nestjs/typeorm": "^8.1.4",
     "@node-rs/argon2": "^1.2.0",
     "@types/lodash": "^4.14.182",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "axios": "^0.27.2",
-    "chalk": "^4.1.2",
+    "chalk": "4.1.2",
     "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -47,6 +49,7 @@
     "dotenv": "^16.0.1",
     "helmet": "^5.1.1",
     "ioredis": "^5.2.2",
+    "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "mysql2": "^2.3.3",
@@ -54,6 +57,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "picocolors": "^1.0.0",
     "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
