--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -35,6 +35,7 @@
     "@nestjs/typeorm": "^8.1.4",
     "@node-rs/argon2": "^1.2.0",
     "@types/lodash": "^4.14.182",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "axios": "^0.27.2",
