--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "author": "martin-yn",
   "description": "",
-  "main": "./lib/index.js",
   "module": "./es/index.js",
-  "types": "./lib/index.d.ts",
+  "main": "./lib/index.js",
+  "types": "./types/index.d.ts",
   "scripts": {
     "format": "prettier --write packages/**/*.{ts,js}",
     "tsc": "tsc --watch",
     "dev": "rollup -w -c rollup.config.js",
-    "build": "tsc -p tsconfig.json && rollup -c rollup.config.js"
+    "build": "tsc -p tsconfig.json && rollup -c rollup.config.js  && yalc publish"
   },
   "files": [
     "lib",
@@ -20,22 +20,25 @@
   "dependencies": {
     "axios": "^0.27.2",
     "error-stack-parser": "^2.1.4",
-    "less": "^4.1.3",
-    "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rrweb": "^2.0.0-alpha.0",
-    "svelte": "^3.49.0",
-    "svelte-preprocess": "^4.10.7",
-    "svelte-preprocess-less": "^0.4.0"
+    "rrweb": "^2.0.0-alpha.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "esbuild": "^0.14.51",
+    "svelte": "^3.49.0",
     "rollup": "^2.77.2",
     "rollup-plugin-esbuild": "^4.9.1",
     "typescript": "^4.7.4",
-    "uglify-js": "^3.16.3"
+    "uglify-js": "^3.16.3",
+    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess-less": "^0.4.0",
+    "less": "^4.1.3",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-polyfill-node": "^0.10.2",
+    "rollup-plugin-styles": "^4.0.0",
+    "rollup-plugin-svelte": "^7.1.0"
   }
 }
